--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,3 +1,5 @@
+@use "../../theme/breakpoints.scss" as *;
+
 .hero {
   position: relative;
 }
@@ -11,11 +13,11 @@
   position: relative;
   padding-left: 15rem;
 
-  @media (max-width: $mantine-breakpoint-md) {
+  @include md-down {
     padding-left: 5rem;
   }
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @include xs-down {
     padding-left: 0;
     align-items: center;
 
@@ -39,25 +41,25 @@
 }
 
 .title1 {
-  @media (max-width: $mantine-breakpoint-md) {
+  @include md-down {
     font-size: rem(100px);
   }
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @include sm-down {
     font-size: rem(60px);
   }
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @include xs-down {
     font-size: rem(50px);
   }
 }
 
 .title2 {
-  @media (max-width: $mantine-breakpoint-sm) {
+  @include sm-down {
     font-size: rem(50px);
   }
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @include xs-down {
     font-size: rem(40px);
   }
 }
@@ -66,20 +68,20 @@
   color: var(--mantine-color-mainGreen-8);
   max-width: rem(433px);
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @include sm-down {
     max-width: 65%;
     font-size: var(--mantine-font-size-sm);
   }
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @include xs-down {
     max-width: 90%;
     text-align: center;
   }
 }
 
 .title_group {
-  @media (max-width: $mantine-breakpoint-sm) {
-    padding-top: 3rem;
+  @include sm-down {
+    padding-top: 2rem;
   }
 }
 
@@ -97,7 +99,7 @@
   position: relative;
   width: fit-content;
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @include xs-down {
     margin-left: 0;
   }
 }
@@ -112,7 +114,7 @@
   border-radius: var(--mantine-radius-lg);
   z-index: -1;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @include sm-down {
     top: 1%;
   }
 }
@@ -120,7 +122,7 @@
 .control {
   margin-top: calc(var(--mantine-spacing-xl) * 1.5);
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @include sm-down {
     width: 100%;
   }
 }
@@ -137,7 +139,7 @@
   max-width: 1400px;
   margin: 0 auto;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @include sm-down {
     width: 150%;
     bottom: 0%;
   }
@@ -216,9 +218,9 @@
   box-sizing: border-box;
   color: #fff;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @include sm-down {
     padding-top: 2rem;
-    width: 100px;
+    width: 90px;
   }
 }
 
@@ -230,7 +232,7 @@
   box-sizing: border-box;
   vertical-align: middle;
 
-  @media (max-width: $mantine-breakpoint-sm) {
+  @include sm-down {
     bottom: 19%;
     width: 100px;
   }
@@ -255,8 +257,8 @@
   bottom: 105px;
   position: relative;
 
-  @media (max-width: $mantine-breakpoint-sm) {
-    font-size: 16px;
+  @include sm-down {
+    font-size: 14px;
     margin-top: 33px;
   }
 }
